# PoliticSystem

./: .gitignore  .pre-commit-config.yaml  .pylintrc  rav.yaml
core/: README.md  conftest.py  manage.py  pyproject.toml  requirements.txt
core/core/: api.py  settings.py  urls.py
core/notifications/: mailgun_notifier.py  test_mailgun_notifier.py
core/user/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py
core/user/api/: __init__.py  api.py  schemas.py
core/user/migrations/: 0001_initial.py  0002_someotherclass_user_gender.py
core/user/tasks/: task_birthday.py
core/user/templates/emails/: birthday.html  birthday.txt
core/user/utils/: base_models.py  models_mixins.py
ui/: ARCHITECTURE.md  SYSTEM_FLOWS.md  SYSTEM_RULES.md  package.json  tailwind.config.ts
ui/docs/adr/: 001-auth-strategy.md  002-bff-architecture.md  003-form-management.md
ui/src/app/: globals.css  layout.tsx  page.tsx
ui/src/app/api/users/: route.ts
ui/src/app/login/: page.tsx
ui/src/app/perfil/: page.tsx
ui/src/components/features/auth/: LoginForm.tsx
ui/src/components/features/home/: HomeAuthenticated.tsx  HomeUnauthenticated.tsx  index.ts
ui/src/components/shared/sidebar/: LucideDynamicIcon.tsx  Sidebar.tsx  sidebar.config.ts
ui/src/components/ui/: Button.tsx  Input.tsx  index.ts
ui/src/contexts/: ReactQueryProvider.tsx
ui/src/lib/: api.ts  server-auth.ts
ui/src/lib/hooks/: index.ts
ui/src/lib/hooks/auth/: useLogin.ts  useLogout.ts
ui/src/lib/schemas/: auth.schema.ts
ui/src/lib/types/button/: button.types.ts
ui/src/styles/: colors.css
(+5 files in other folders)
