[project]
name = "Politic-System"
version = "0.1.0"
description = "Sistema de gestão de partidos políticos"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asgiref==3.8.1",
    "cfgv==3.4.0",
    "distlib==0.3.9",
    "django==5.2.1",
    "django-appconf==1.1.0",
    "django-cors-headers==4.7.0",
    "django-daisy==1.0.23",
    "django-extensions>=4.1",
    "django-filter==25.1",
    "django-localflavor==4.0",
    "django-q2>=1.8.0",
    "django-select2==8.4.0",
    "djangorestframework==3.16.0",
    "djangorestframework-simplejwt==5.5.0",
    "filelock==3.18.0",
    "identify==2.6.10",
    "ipython>=9.3.0",
    "nodeenv==1.9.1",
    "platformdirs==4.3.8",
    "pre-commit==4.2.0",
    "pyjwt==2.9.0",
    "python-dotenv>=1.1.0",
    "python-stdnum==2.1",
    "pyyaml==6.0.2",
    "responses>=0.25.0",
    "sqlparse==0.5.3",
    "virtualenv==20.31.2",
]
